--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "execa": "^0.7.0",
-    "wifi-name": "^3.0.0"
+    "wifi-name": "^3.0.0",
+    "wifi-password": "^3.0.1"
   },
   "devDependencies": {
     "ava": "*",
